# opcua-quality-analyzer

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: Opc.Ua.LaserSystems.NodeSet2.xml
src/: cli.py
src/dashboard/: app.py
src/metrics/: metric_engine.py
src/parser/: nodeset_parser.py
tests/: test_metrics.py
